# Learning

./: .gitmodules  C++ Mind Map  README.md
C++/Cpp-High-Performance/: README.md
C++/Cpp-High-Performance/Chapter01/: abstractions.cpp
CMake/CMakeTutorial/: README.md
CMake/CMakeTutorial/Step1/: CMakeLists.txt  tutorial.cxx
CMake/CMakeTutorial/Step10/: CMakeLists.txt
CMake/CMakeTutorial/Step2/: CMakeLists.txt  tutorial.cxx
CMake/CMakeTutorial/Step3/: CMakeLists.txt  TutorialConfig.h.in
CMake/CMakeTutorial/Step5/: CMakeLists.txt
CMake/CMakeTutorial/Step6/MathFunctions/: CMakeLists.txt
CMake/CMakeTutorial/Step8/: CMakeLists.txt
CMake/CMakeTutorial/Step9/: CMakeLists.txt  tutorial.cxx
CMake/Step5/: TutorialConfig.h.in
CMake/Step5/MathFunctions/: mysqrt.cxx
CMake/Step6/MathFunctions/: mysqrt.cxx
Competative Programming/Competitive Programmer’s Handbook/Count Same In Arrs/: CountSameInArrs.cpp
Competative Programming/Competitive Programmer’s Handbook/Maximum Subarray Sum/: a.out
Competitive Programming/Competitive Programmer’s Handbook/Count Same In Arrs/: a.out
Competitive Programming/Competitive Programmer’s Handbook/Maximum Subarray Sum/: MaxSubArr.cpp  MaxSubSumFunction.cpp
Competitive Programming/Competitive Programmer’s Handbook/Sorting/: SortingStd.cpp
Mind Maps/: C++ MM  Engineering Taks  Linux Tools MM  ROS MM  ROSbot 2 MM  TurtleBot3 MM
OpenCV/1_load/1_img_load/: 1_img_load.pro
OpenCV/2_mod_save/2_load_modify_save/: 2_load_modify_save.pro
OpenCV/3_mat/3_Mat/: main.cpp
OpenCV/OpenCVTutorials/: README.md
(+147 files in other folders)
